deploy-traccar/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traccar
  labels:
    app.kubernetes.io/name: traccar
    app.kubernetes.io/managed-by: kubectl
